# Agent_Rag_learn

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
Agent/: simple_agent.py
RAG/: RAG计划_day1.md
RAG/Embedding/: embedding_demo.py  test1.py
RAG/RAGDemo/: README.md  check_db.py  learn.txt  list_collections.py  naive_rag copy.py  naive_rag.py  requirements.txt  simple_test.py  slots_explanation.py  test_chunk.py  test_chunk1.py  test_chunk2.py  test_chunk_comparison.py  test_chunking.py  test_chunking_independent.py  verify_chunking.py
clawAgent/: Agent.md  main.py  pyproject.toml  skill.md  step0.py  step1.py  step2.py  test0.py  test1.py  test2.py  test2_qwen.py
doc/: FAISS 索引完全指南.md  __slots__原理与内存优化完全指南.md  懒加载完全指南.md
learn/: 30-day-checklist.md  30-day-study-plan.md  AI学习方法论2.md  AI时代学习方法论.md  Knowlage.md  agent-study-plan.md  rag-study-plan.md
learn/323/: cpp-core-knowledge.md  cpp-raii-move-semantics.md
learn/324/: 2026-03-24 今日计划.md
learn/325/: rag-day2-plan.md  问题清单.md
learn/326/: agent-day1-detailed-plan.md  day3-chunking-plan.md
learn/327/: rag-day4-plan.md
learn/328/: agent-day1-detailed-plan.md  day5-embedding-plan.md  embedding-results.txt  embedding_practice.py
learn/330/: BLOG.md  day6-embedding-deep-dive.md  day7-output-feedback.md
learn/407/: day01.md  day02.md
learn/408/: week2-day3-4-query-optimization.md
learn/learnNote/: TextChunkingNote.md  embedding-notes.md  test01.md  test02.md  vectorDatabase.md  向量数据库_note.md  向量数据库技术博客.md
